1/18/13 wrote implementation-notes.txt
1/18/13 more detailed doc for RandomChooser
1/18/13 remove flavor test-equation-nodes from build.properties
# 0.00.53 (71794) Jan 18, 2013
1/18/13 use separate image files for point tool body and tip, make tip unpickable so that bounds of point tool doesn't interfere with picking manipulators
# 0.00.52 (71766) Jan 17, 2013
1/17/13 bug fixes in levels 5 & 6
1/17/13 fix: in levels 5 & 6, need to use x1=0 for PTP challenges involving slope-intercept
1/17/13 fix: in level=6, the PTP challenge with point-slope form is erroneously configured for slope-intercept
1/17/13 fix: in level=5, the PTP challenge with point-slope form is erroneously configured for slope-intercept
1/17/13 ran IDEA's Analyze->Inspect Code, addressed issues where it made sense to do so
1/17/13 screenshot
# 0.00.51 (71745) Jan 16, 2013
1/16/13 first feature-complete version for testing
1/16/13 organize imports for all source files
1/16/13 use Graph.lines in game [71728]
1/16/13 add Graph.lines, make the point tool observe it [71724]
1/15/13 cleanup ChallengeFactory subclasses
1/15/13 delete unnecessary zero-arg constructors in ChallengeFactory subclasses
1/15/13 delete obsolete TestFractionSlopes
1/15/13 internal documentation touch-up
1/15/13 mismatch representations for PTP challenges in level=6
1/15/13 save a snapshot of Google design doc and check into SVN
1/15/13 incorporate AP's feedback into model.txt
1/15/13 clearer documentation for individual challenges in ChallengeFactory hierarchy
1/15/13 expand abbreviations throughout code (GTE->GraphTheLine, MTE->MakeTheEquation, PTP->PlaceThePoints, etc.)
1/15/13 factor out duplication in ChallengeFactory hierarchy
1/15/13 use the same instance of the random number generator for all random parts of a challenge factory
1/15/13 move static ChallengeFactory.createChallenges to LineGameModel
1/15/13 implementation of challenge generation for level=6