@@ -4,6 +4,7 @@ package edu.colorado.phet.linegraphing.linegame.model;
 import java.awt.Color;
 import java.awt.geom.Point2D;
 import java.util.ArrayList;
+import java.util.Collections;
 
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
 import edu.colorado.phet.linegraphing.common.model.Fraction;
@@ -183,6 +184,7 @@ class ChallengeFactory5 extends ChallengeFactory {
         }
 
         // shuffle and return
-        return shuffle( challenges );
+        Collections.shuffle( challenges );
+        return challenges;
     }
 }
