@@ -3,6 +3,7 @@ package edu.colorado.phet.linegraphing.linegame.model;
 
 import java.awt.Color;
 import java.util.ArrayList;
+import java.util.Collections;
 
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
 import edu.colorado.phet.linegraphing.common.model.Line;
@@ -113,6 +114,7 @@ class ChallengeFactory6 extends ChallengeFactory {
         }
 
         // shuffle and return
-        return shuffle( challenges );
+        Collections.shuffle( challenges );
+        return challenges;
     }
 }
